# quality-loop

./: .gitignore  README.md  pyproject.toml
data/: recipes.json
examples/: factory.full.yaml  factory.schema.json
scripts/: convert_dump.py
src/quality_loop/: __init__.py  cli.py  config.py  engine.py  factory.py  recipes.py
tests/: test_beacons.py  test_config.py  test_engine.py  test_factory.py  test_recipes.py
